# TinyHexaIU

./: .gitignore  CMakeLists.txt  README.md
Docs/: Dokumentation.md  header.tex
src/: CMakeLists.txt  main.c
src/Controller/: Err_Log.c  Err_Log.h  Main_Controller.c  Main_Controller.h  Utilities.c  Utilities.h
src/Model/: Data_Buffer.c  Data_Buffer.h  File_Manager.c  File_Manager.h
src/View/: Bottom_Bar.c  Bottom_Bar.h  Display_Strategy.c  Display_Strategy.h  Editor.c  Editor.h  Main_Window.c  Main_Window.h  Ncurses_Check.h  Top_Bar.c  Top_Bar.h  editor_draw.c  editor_input.c
